# neon-world-os

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .codespell-ignore-words.txt  .commitlintrc.yml  .dockerignore  .editorconfig  .gcovr.cfg  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  ACCESSIBILITY.md  API_STABILITY.md  API_STABILITY_POLICY.md  ARCHITECTURE.md  BACKPORTING.md  BACKTRACE.md  BUILD.bazel  CHANGELOG.md  CHANGELOG_POLICY.md  CII-BEST-PRACTICES.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODESTYLE.md  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONFIGURATION.md  CONTRIBUTING.md  CONTRIBUTOR_GUIDE.md  CONTRIBUTOR_LADDER.md  DATA_CLASSIFICATION.md  DATA_RETENTION.md  DCO  DEVELOPING.md  (+53 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: abi-compat.yml  abi-dump.yml  actionlint.yml  alex.yml  bench.yml  benchmark-guard.yml  bloaty.yml  build-cache.yml  changelog-enforcer.yml  ci-macos.yml  ci-matrix-extended.yml  ci-windows.yml  ci.yml  clang-format-check.yml  clang-tidy-review.yml  clang-tidy.yml  cmake-consume.yml  cmake-format-lint.yml  codeql.yml  codespell.yml  commitlint.yml  compile-flags-audit.yml  container-attest.yml  container-multiarch.yml  container-sbom-sign.yml  container-security.yml  container-smoke.yml  container.yml  coverage-codecov.yml  coverage-gate.yml  coverage-gcovr.yml  cppcheck.yml  cross-compile.yml  cross.yml  dco.yml  dependency-review.yml  determinism.yml  dockle.yml  docs-check.yml  docs-sphinx.yml  (+62 more)
.reuse/: dep5
.well-known/: security.txt
apps/: neon.cpp
cmake/: NEONWorldOSConfig.cmake.in  build_info.hpp.in  cmake_uninstall.cmake.in  uninstall.cmake.in
cmake/toolchains/: linux-musl.cmake
completions/: _neon  neon.bash  neon.fish  neon.ps1
compliance/: THIRD_PARTY_NOTICES.txt
config/: neon.conf.example
deploy/kubernetes/: neon.yaml
docs/: API_STABILITY.md  ARCHITECTURE.md  CONTRIBUTOR_GUIDE.md  INCIDENT_RESPONSE.md  RISK_REGISTER.md  SLO_ERROR_BUDGET.md  THREAT_MODEL.md  VERSIONING.md  WHITEPAPER.md  cli-spec.md  getting-started.md  index.md  release-checklist.md  requirements.txt  support-matrix.md
docs/adr/: 0001-architecture-and-tech-choices.md  0001-template.md  0002-plugin-system.md
docs/api/: Doxyfile
docs/man/: neon.1
docs/rfc/: 0001-template.md
docs/site/: ethics-and-transparency.md  getting-started.md  index.md
docs/sphinx/: conf.py  index.rst
examples/c/: CMakeLists.txt  main.c
examples/cpp/: CMakeLists.txt  main.cpp
examples/csharp/: Program.cs
examples/embedding/: minimal.cpp
examples/python/: hello.py
examples/rust/: Cargo.toml
examples/single_include/: CMakeLists.txt  main.cpp
fuzz/: shell_fuzz.cpp  smoke_fuzz.cpp
include/: neon_c.h
include/neon/: base64.hpp  build_info.hpp.in  common.hpp  crypto.hpp  drivers.hpp  export.hpp  log.hpp  memory.hpp  merkle.hpp  neon.hpp  pch.hpp  plugin.hpp  scheduler.hpp  schemas.hpp  shell.hpp  telemetry.hpp  trace.hpp  util.hpp  vfs.hpp
man/: neon.1
packaging/: CPackConfig.cmake
packaging/arch/: PKGBUILD
packaging/archlinux/: PKGBUILD
packaging/chocolatey/: neon-world-os.nuspec
packaging/cmake/: NeonConfig.cmake.in
packaging/consumer-sample/: CMakeLists.txt  main.cpp
packaging/debian/: changelog  control
packaging/def/: neonc.def
packaging/docker/: Dockerfile  Dockerfile.distroless
packaging/flatpak/: io.neon.WorldOS.json
packaging/freebsd/: Makefile  distinfo
packaging/homebrew/: neon-world-os.rb
packaging/lds/: neonc.map
packaging/linker/: neon_c.version
packaging/macos/: com.neon.worldos.plist
packaging/macports/: Portfile
packaging/pkgconfig/: neon-world-os-c.pc.in  neon-world-os-cpp.pc.in
packaging/rpm/: neon-world-os.spec
packaging/scoop/: neon-world-os.json
packaging/systemd/: neon.service
packaging/windows/: neon-service.ps1
packaging/winget/: manifest.yaml
pkgconfig/: neon-world-os-c.pc.in  neon-world-os-cpp.pc.in  neon-world-os.pc.in
plugins/echo_plus/: CMakeLists.txt  echo_plus.cpp
schemas/: about.schema.json  cmake_options.schema.json  config_validate.schema.json  doctor.schema.json  help.schema.json  k8s_deploy.schema.json  trace.schema.json  version.schema.json
scripts/: preflight.sh  windows_build.ps1
scripts/completions/: neon.bash  neon.fish  neon.zsh
security/apparmor/: neon.apparmor
security/seccomp/: neon-seccomp.json
security/selinux/: neon.te
snap/: snapcraft.yaml
src/: api_c.cpp  memory.cpp  scheduler.cpp  shell.cpp  telemetry.cpp  util.cpp  vfs.cpp  vfs_dump.cpp
tests/: c_api_smoke.c  test_acl_manifest_scrub_prune.cpp  test_alias_tree_hash_misc.cpp  test_audit_redact.cpp  test_bench_and_policy_io.cpp  test_c_api.cpp  test_cache_metrics_dpack_scan_trash.cpp  test_chattr_recursive_and_fsck_repair.cpp  test_chattr_vars_diff_repl_snap.cpp  test_cli_json.cpp  test_cli_selftest.cpp  test_cli_version.cpp  test_delta_and_jsonrun_journal.cpp  test_diff_grep_wc_hex.cpp  test_e2e_cli.cpp  test_export_import_dryrun.cpp  test_fsck_full.cpp  test_guard_and_audit_chain.cpp  test_hmac_export_import_and_verify.cpp  test_lintrepo.cpp  test_locks_index_snapdiff_seal.cpp  test_memory.cpp  test_merkle_hmac.cpp  test_meta_and_io.cpp  test_metrics_hist.cpp  test_plugin_policy.cpp  test_qprefix_autosnap_hooks_trash_du_df_sign.cpp  test_rate_metrics_merklemeta.cpp  test_scansecrets.cpp  test_scheduler.cpp  test_sha256.cpp  test_shell.cpp  test_shell_find.cpp  test_shell_limit.cpp  test_shell_policy.cpp  test_shell_schema.cpp  test_shell_snap_cp_stat.cpp  test_shell_tokenize.cpp  test_sleep.cpp  test_snap_diff.cpp  (+28 more)
tests/c/: capi_test.c
tools/: cmake_options_to_json.py  compile_flags_audit.py  e2e_smoke.sh  grep_nondeterminism.sh  size_budget.py  spdx_check.sh  validate_about.py  validate_completions.py  validate_config_validate.py  validate_doctor.py  validate_help.py  validate_k8s_deploy.py  validate_trace.py  validate_version.py
(+18 files in other folders)
